--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <meta charset="utf-8">
 <title>Bootstrap 4 Demo</title>
 
+<link rel="stylesheet" type="text/css" href="public/styles/limestrap.min.css">
+
+
+
 <style>
 .bd-content>h1:not(:first-child),
 .bd-content>h2:not(:first-child),
@@ -248,9 +252,7 @@
 	height: 400px;
 }
 </style>
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<script src="public/scripts/limestrap.min.js" ></script>
 <script>
 jQuery( document ).ready(function() {
 	jQuery('[data-toggle="popover"]').popover();
