add question to index

--- a/index.html
+++ b/index.html
@@ -81,6 +81,99 @@ setJsVar();
 
 <div class="outerframe container" id="outerframeContainer">
 
+    <div id="group-0" class="row">
+    <!-- Start group -->
+    <div class="col-xs-12 group-container">
+        <h3 class="group-name"></h3>
+    </div>
+
+
+
+
+    <!-- PRESENT THE QUESTIONS (in SurveyRunTime )  -->
+    <!-- Question -->
+        <div id="question11973" class="text-short  mandatory col-xs-12">
+
+            <!-- Question title -->
+            <div class="row question-wrapper">
+                <div class="col-sm-12 questiontext">
+                    <h4 class="qnumcode">
+                    <span class="text-danger asterix"><span class="text-danger asterisk"></span>
+    </span> a01  Codi Escola
+                    </h4>
+                </div>
+            </div>
+
+            <!-- Question help -->
+            <div class="row question-wrapper">
+                <div class="col-sm-12 questionhelpcontainer">
+
+                </div>
+            </div>
+
+            <!-- Question man message -->
+            <div class="row question-wrapper">
+                <div class="col-sm-12 questionmancontainer ">
+
+                </div>
+            </div>
+
+            <!-- Question valid message -->
+            <div class="row question-wrapper">
+                <div class="col-sm-12 questionvalidcontainer">
+
+                </div>
+            </div>
+
+            <!-- Question file valid message -->
+            <div class="row question-wrapper">
+                <div class="col-sm-12 questionfilevalidcontainer">
+
+                </div>
+            </div>
+
+            <!-- Answer -->
+            <div class="row question-wrapper">
+                <div class="col-sm-12 answer">
+
+    <div class="question answer-item text-item  inputwidth-12 col-sm-12 form-horizontal short-free-text">
+
+        <div class="form-group">
+
+            <!-- Label -->
+            <label class="control-label col-xs-12 col-sm-2 hide label" for="answer714663X394X11973">
+                La teva resposta        </label>
+
+            <!-- Prefix -->
+
+            <!-- Input -->
+            <div class="col-xs-12 col-sm-7">
+                <input class="form-control text  empty" type="text" size="12" name="714663X394X11973" id="answer714663X394X11973" value="" onkeyup="checkconditions(this.value, this.name, this.type)">
+            </div>
+
+            <!-- Suffix -->
+
+        </div>
+    </div>
+
+                </div>
+            </div>
+
+            <!-- Question help -->
+            <div class="row question-wrapper">
+                <div class="col-sm-12 question-help">
+
+                </div>
+            </div>
+        </div>
+    <input type="hidden" name="lastanswer" value="714663X394X11973" id="lastanswer">
+
+
+    <!-- END THE GROUP -->
+    <!-- endgroup -->
+
+
+    </div>
     <div class="row" id="main-row">
 
         <div class='col-xs-12' id="yii-flash-message">
@@ -115,6 +208,82 @@ setJsVar();
 
                     <!-- PRESENT THE QUESTIONS (in SurveyRunTime )  -->
                     <!-- Question -->
+                    <!-- PRESENT THE QUESTIONS (in SurveyRunTime )  -->
+                    <!-- Question -->
+                    <div id="question11973" class="text-short  mandatory col-xs-12">
+
+                        <!-- Question title -->
+                        <div class="row question-wrapper">
+                            <div class="col-sm-12 questiontext">
+                                <h4 class="qnumcode">
+                                    <span class="text-danger asterix"><span class="text-danger asterisk"></span></span> a01  Codi Escola
+                                </h4>
+                            </div>
+                        </div>
+
+                        <!-- Question help -->
+                        <div class="row question-wrapper">
+                            <div class="col-sm-12 questionhelpcontainer">
+
+                            </div>
+                        </div>
+
+                        <!-- Question man message -->
+                        <div class="row question-wrapper">
+                            <div class="col-sm-12 questionmancontainer ">
+
+                            </div>
+                        </div>
+
+                        <!-- Question valid message -->
+                        <div class="row question-wrapper">
+                            <div class="col-sm-12 questionvalidcontainer">
+
+                            </div>
+                        </div>
+
+                        <!-- Question file valid message -->
+                        <div class="row question-wrapper">
+                            <div class="col-sm-12 questionfilevalidcontainer">
+
+                            </div>
+                        </div>
+
+                        <!-- Answer -->
+                        <div class="row question-wrapper">
+                            <div class="col-sm-12 answer">
+
+                                <div class="question answer-item text-item  inputwidth-12 col-sm-12 form-horizontal short-free-text">
+
+                                    <div class="form-group">
+
+                                        <!-- Label -->
+                                        <label class="control-label col-xs-12 col-sm-2 hide label" for="answer714663X394X11973">
+                                        La teva resposta        </label>
+
+                                        <!-- Prefix -->
+
+                                        <!-- Input -->
+                                        <div class="col-xs-12 col-sm-7">
+                                            <input class="form-control text  empty" type="text" size="12" name="714663X394X11973" id="answer714663X394X11973" value="" onkeyup="checkconditions(this.value, this.name, this.type)">
+                                        </div>
+
+                                        <!-- Suffix -->
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <!-- Question help -->
+                        <div class="row question-wrapper">
+                            <div class="col-sm-12 question-help">
+
+                            </div>
+                        </div>
+                    </div>
+
                     <div  id="question1083" class="list-radio  mandatory col-xs-12 question-container">
 
                         <!-- Question title -->
