add requests of "Enquesta esports a les criatures" email

--- a/index.html
+++ b/index.html
@@ -1018,6 +1018,94 @@ setJsVar();
 
 
 </tr>
+<tr id="javatbd714663X67X1088SQ002" class=" well subquestion-list questions-list array2 ">
+            <th class="answertext col-xs-12 col-sm-6">
+
+
+                    Natació o nedar                <input type="hidden" name="java714663X67X1088SQ002" id="java714663X67X1088SQ002" value="">
+    </th>
+
+
+<!-- answer_td_checkboxes -->
+<td class="answer-cell-6 answer_cell_SQ001 question-item answer-item  checkbox-item checkbox-item checkbox text-center">
+
+    <input type="hidden" name="java714663X67X1088SQ002_SQ001" id="java714663X67X1088SQ002_SQ001" value="">
+
+    <input type="hidden" name="714663X67X1088SQ002_SQ001" id="answer714663X67X1088SQ002_SQ001" value="">
+
+    <input type="checkbox" class="checkbox " name="cbox_714663X67X1088SQ002_SQ001" id="cbox_714663X67X1088SQ002_SQ001" onclick="
+            cancelBubbleThis(event);
+            aelt=document.getElementById('answer714663X67X1088SQ002_SQ001');
+            jelt=document.getElementById('java714663X67X1088SQ002_SQ001');
+            if(this.checked)
+            {
+                aelt.value=1;
+                jelt.value=1;
+                fixnum_checkconditions(1,'714663X67X1088SQ002_SQ001',aelt.type);
+            }
+            else
+            {
+                aelt.value='';
+                jelt.value='';
+                fixnum_checkconditions('','714663X67X1088SQ002_SQ001',aelt.type);
+            }
+            return true;" onchange="checkconditions(this.value, this.name, this.type)" aria-labelledby="label-cbox_714663X67X1088SQ002_SQ001">
+
+        <label for="cbox_714663X67X1088SQ002_SQ001"></label>
+
+        <!--
+             The label text is provided inside a div,
+             so final user can add paragraph, div, or whatever he wants in the subquestion text
+             This field is related to the input thanks to attribute aria-labelledby
+        -->
+        <div class="visible-xs-block label-text" id="label-cbox_714663X67X1088SQ002_SQ001">
+            ...ajudar als companys i companyes per tenir un millor resultat de tot l'equip        </div>
+
+    </td>
+<!-- end of answer_td_checkboxes -->
+
+<!-- answer_td_checkboxes -->
+<td class="answer-cell-6 answer_cell_SQ002 question-item answer-item  checkbox-item checkbox-item checkbox text-center">
+
+    <input type="hidden" name="java714663X67X1088SQ002_SQ002" id="java714663X67X1088SQ002_SQ002" value="">
+
+    <input type="hidden" name="714663X67X1088SQ002_SQ002" id="answer714663X67X1088SQ002_SQ002" value="">
+
+    <input type="checkbox" class="checkbox " name="cbox_714663X67X1088SQ002_SQ002" id="cbox_714663X67X1088SQ002_SQ002" onclick="
+            cancelBubbleThis(event);
+            aelt=document.getElementById('answer714663X67X1088SQ002_SQ002');
+            jelt=document.getElementById('java714663X67X1088SQ002_SQ002');
+            if(this.checked)
+            {
+                aelt.value=1;
+                jelt.value=1;
+                fixnum_checkconditions(1,'714663X67X1088SQ002_SQ002',aelt.type);
+            }
+            else
+            {
+                aelt.value='';
+                jelt.value='';
+                fixnum_checkconditions('','714663X67X1088SQ002_SQ002',aelt.type);
+            }
+            return true;" onchange="checkconditions(this.value, this.name, this.type)" aria-labelledby="label-cbox_714663X67X1088SQ002_SQ002">
+
+        <label for="cbox_714663X67X1088SQ002_SQ002"></label>
+
+        <!--
+             The label text is provided inside a div,
+             so final user can add paragraph, div, or whatever he wants in the subquestion text
+             This field is related to the input thanks to attribute aria-labelledby
+        -->
+        <div class="visible-xs-block label-text" id="label-cbox_714663X67X1088SQ002_SQ002">
+            ...voler guanyar sempre        </div>
+
+    </td>
+<!-- end of answer_td_checkboxes -->
+
+<!-- end of answer_td_checkboxes -->
+
+    <!-- right -->
+    </tr>
 <!-- end of answer_row -->
         </tbody>
     </table>
