--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@ setJsVar();
     <div id="topContainer" class="jumbotron">
         <div class="container">
 
-    <div class="progress">
+    <!-- <div class="progress">
         <div class="progress-bar" role="progressbar" aria-valuenow="11" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 11%;">
             11%
         </div>
-    </div>
+    </div> -->
 
         </div>
     </div>
